Fixed vendors and products problem with the json response
