# ANITA/python/swagger/v1/trend-analysis.yml
@@ -154,35 +154,35 @@ paths:
         503:
           description: "Database unreachable"
 
-    /{marketplace}/product/:
-      post:
-        operationId: "api.endpoints.trend_analysis.trend_analysis.get_vendors"
-        summary: "Endpoint used to obtain all the data related to a project from the db"
+  /{marketplace}/product/:
+    post:
+      operationId: "api.endpoints.trend_analysis.trend_analysis.get_product"
+      summary: "Endpoint used to obtain all the data related to a project from the db"
 
-        consumes:
-          - "multipart/form-data"
-        produces:
-          - "application/json"
+      consumes:
+        - "multipart/form-data"
+      produces:
+        - "application/json"
 
-        parameters:
-          - in: path
-            name: marketplace
-            required: true
-            type: string
-          - in:  formData
-            name: name
-            required: true
-            type: string
+      parameters:
+        - in: path
+          name: marketplace
+          required: true
+          type: string
+        - in: formData
+          name: name
+          required: true
+          type: string
 
-        responses:
-          200:
-            description: "A json containing all the product's info of a given marketplace, ordered by timestamp"
-          404:
-            description: "Marketplace and/or vendor not found"
-          500:
-            description: "Internal server error: general error used if the server raises an exception unmanaged by other 5xx status code"
-          503:
-            description: "Database unreachable"
+      responses:
+        200:
+          description: "A json containing all the product's info of a given marketplace, ordered by timestamp"
+        404:
+          description: "Marketplace and/or vendor not found"
+        500:
+          description: "Internal server error: general error used if the server raises an exception unmanaged by other 5xx status code"
+        503:
+          description: "Database unreachable"
 
   /graph-analysis/:
     get:
@@ -205,8 +205,16 @@ paths:
       operationId: "api.endpoints.trend_analysis.trend_analysis.graph_analysis_vendor"
       summary: "Provides the graph analysis of a vendor, showing the relation with all marketplaces available"
 
+      consumes:
+        - "application/xml"
       produces:
         - "application/json"
+
+      parameters:
+        - in: path
+          name: vendor
+          required: true
+          type: string
 
       responses:
         200:
